minor rewording in the conclusion to make it make sense

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -948,7 +948,7 @@ The combination of the Eastern and Western Polynesian populations into a single 
 
 ### Conclusions
 
-The analyses in this chapter for performance of the case-definition for gout association studies showed that in the absence of the gold-standard of observing urate crystals in the synovial fluid, or the \gls{acr} criteria, it is recommended to use the self-report or \gls{ult} definition, as this gives the best performance, out of the definitions tested in this analysis. It was also shown that incorporation of selection analyses with \gls{gwas} does provide evidence for additional evidence for variants associated with gout, despite these associations already mostly being nominally significant from \gls{gwas}, the selection analyses do provide an avenue for prioritisation of \gls{gwas} results but only appeared to further enhance evidence at known loci, rather than aid in discovery. Further work such as incorporating multiple selection statistics, and the use of whole genome sequenced data or imputed genetic data would be useful to improve the prioritising of \gls{gwas} results.
+The analyses in this chapter for performance of the case-definition for gout association studies showed that in the absence of the gold-standard of observing urate crystals in the synovial fluid, or the \gls{acr} criteria, it is recommended to use the self-report or \gls{ult} definition, as this gives the best performance, out of the definitions tested in this analysis. It was also shown that incorporation of selection analyses with \gls{gwas} does provide evidence for additional variants associated with gout. Despite these associations already mostly being nominally significant from \gls{gwas}, the selection analyses do provide an avenue for prioritisation of \gls{gwas} results but only appeared to further enhance evidence at known loci, rather than aid in discovery. Further work such as incorporating multiple selection statistics, and the use of whole genome sequenced data or imputed genetic data would be useful to improve the prioritising of \gls{gwas} results.
   
 
 <!-- When performing genetic association studies, and only self-report information is available, i -->
